--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,12 @@
 {
   "hosting": {
     "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
-          "source": "/(.*)",
-          "destination": "/"
+        "source": "/(.*)",
+        "destination": "/index.html"
       }
-  ]
+    ]
   }
 }
